# nrf52840-sht41-temperature-sensor

./: Cargo.toml  memory.x
src/: main.rs  sht41.rs
