[package]
name = "nrf52840-temperature-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.10.0", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-time = { version = "0.5.1" }

embedded-hal-async = "1"
defmt = "1"
defmt-rtt = "1"
cortex-m = {version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"]}
